--- a/nginx/conf.d/synapse.conf
+++ b/nginx/conf.d/synapse.conf
@@ -44,8 +44,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # Generate and pass request ID for tracing
+        set $request_id $request_id$connection$connection_requests;
+        proxy_set_header X-Request-ID $request_id;
+        add_header X-Request-ID $request_id always;
+        
         # Rate limiting for general requests
         limit_req zone=general burst=50 nodelay;
+        
+        # Custom access logging for frontend requests
+        access_log /var/log/nginx/frontend.log json_detailed;
     }
     
     # Backend API
@@ -59,6 +67,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # Generate and pass request ID for tracing
+        set $request_id $request_id$connection$connection_requests;
+        proxy_set_header X-Request-ID $request_id;
+        add_header X-Request-ID $request_id always;
+        
         # Timeout settings
         proxy_connect_timeout 60s;
         proxy_send_timeout 300s;
@@ -68,6 +81,21 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+        
+        # Enhanced logging for API requests
+        access_log /var/log/nginx/api.log json_detailed;
+        
+        # Log slow requests
+        set $slow_request "";
+        access_by_lua_block {
+            ngx.ctx.start_time = ngx.now()
+        }
+        log_by_lua_block {
+            local request_time = ngx.now() - ngx.ctx.start_time
+            if request_time > 5 then
+                ngx.log(ngx.WARN, "Slow request detected: " .. ngx.var.request .. " took " .. request_time .. "s")
+            end
+        }
     }
     
     # Auth endpoints with stricter rate limiting
@@ -80,7 +108,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # Generate and pass request ID for tracing
+        set $request_id $request_id$connection$connection_requests;
+        proxy_set_header X-Request-ID $request_id;
+        add_header X-Request-ID $request_id always;
+        
         limit_req zone=auth burst=10 nodelay;
+        
+        # Security-focused logging for auth endpoints
+        access_log /var/log/nginx/auth.log security;
+        
+        # Log rate limit violations
+        limit_req_log_level warn;
     }
     
     # API endpoints with moderate rate limiting
@@ -93,6 +132,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
+        # Generate and pass request ID for tracing
+        set $request_id $request_id$connection$connection_requests;
+        proxy_set_header X-Request-ID $request_id;
+        add_header X-Request-ID $request_id always;
+        
         proxy_connect_timeout 60s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
@@ -102,6 +146,9 @@ server {
         proxy_set_header Connection "upgrade";
         
         limit_req zone=api burst=20 nodelay;
+        
+        # Performance logging for high-traffic endpoints
+        access_log /var/log/nginx/api_performance.log performance;
     }
     
     # Health checks (no rate limiting)
