--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,12 +13,80 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging format
+    # Enhanced logging formats for comprehensive debugging
+    
+    # Standard access log format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    # Detailed JSON logging format for structured log analysis
+    log_format json_detailed escape=json '{'
+        '"timestamp":"$time_iso8601",'
+        '"remote_addr":"$remote_addr",'
+        '"remote_user":"$remote_user",'
+        '"request":"$request",'
+        '"method":"$request_method",'
+        '"uri":"$uri",'
+        '"query_string":"$query_string",'
+        '"status":$status,'
+        '"response_size":$body_bytes_sent,'
+        '"request_size":$request_length,'
+        '"response_time":$request_time,'
+        '"upstream_response_time":"$upstream_response_time",'
+        '"upstream_status":"$upstream_status",'
+        '"upstream_addr":"$upstream_addr",'
+        '"http_referer":"$http_referer",'
+        '"http_user_agent":"$http_user_agent",'
+        '"http_x_forwarded_for":"$http_x_forwarded_for",'
+        '"http_x_real_ip":"$http_x_real_ip",'
+        '"http_host":"$http_host",'
+        '"http_x_request_id":"$http_x_request_id",'
+        '"connection_serial_number":$connection,'
+        '"connection_requests":$connection_requests,'
+        '"ssl_protocol":"$ssl_protocol",'
+        '"ssl_cipher":"$ssl_cipher",'
+        '"scheme":"$scheme",'
+        '"gzip_ratio":"$gzip_ratio"'
+    '}';
+
+    # Performance-focused logging format
+    log_format performance '$remote_addr - [$time_local] "$request" '
+                          '$status $body_bytes_sent $request_time '
+                          '$upstream_response_time "$http_user_agent" '
+                          '"$http_x_request_id"';
+
+    # Security-focused logging format for monitoring attacks
+    log_format security '$remote_addr - [$time_local] "$request" '
+                       '$status "$http_user_agent" "$http_referer" '
+                       '"$http_x_forwarded_for" "$http_x_real_ip" '
+                       '$request_length $body_bytes_sent '
+                       '"$http_authorization" "$http_cookie"';
+
+    # Error logging format with additional context
+    log_format error_detailed '$remote_addr - [$time_local] "$request" '
+                             '$status "$http_user_agent" '
+                             'error="$upstream_status" '
+                             'upstream="$upstream_addr" '
+                             'time=$request_time '
+                             'id="$http_x_request_id"';
+
+    # Configure access logs with rotation
+    access_log /var/log/nginx/access.log json_detailed buffer=32k flush=5s;
+    access_log /var/log/nginx/performance.log performance buffer=16k flush=10s;
+    
+    # Conditional logging for different endpoints
+    map $uri $log_api {
+        ~^/api/ api;
+        ~^/auth/ auth;
+        default general;
+    }
+    
+    # Conditional logging based on status codes
+    map $status $log_error {
+        ~^[45] error;
+        default access;
+    }
 
     # Performance settings
     sendfile on;
